package com.ispgr5.locationsimulator.core.util

object TestTags {

    const val TOP_BAR_BACK_BUTTON = "TopBarBack"


    const val HOME_SELECT_CONFIG_BUTTON ="SelectConfigButton"
    const val SELECT_ADD_BUTTON ="AddConfigButton"

    const val HOME_DARKMODE = "DarkMode"
    const val HOME_LIGHTMODE = "LightMode"

    const val ADD_NAME_TEXTINPUT ="AddNameTextInput"
    const val ADD_DESCRIPTION_TEXTINPUT = "AddDescriptionTextInput"
    const val ADD_SAVE_BUTTON ="AddSaveButton"

    const val SELECT_CONFIG_BUTTON_PREFIX = "SelectConfigButtonWithName:"
    //name of config for identification (nicht eindeutig vergeben)
    const val SELECT_CONFIG_BUTTON_SELECT_PREFIX = "SelectConfigButtonSELECTWithName:"
    const val SELECT_CONFIG_BUTTON_EDIT_PREFIX = "SelectConfigButtonEditWithName:"
    const val SELECT_CONFIG_BUTTON_DUPLICTAE_PREFIX = "SelectConfigButtonDUplicateWithName:"

    const val EDIT_CONFIG_ITEM= "ConfigItem"
    const val EDIT_VIB_SLIDER_STRENGTH_TEXT = "StrengthSliderText"
    const val EDIT_VIB_SLIDER_STRENGTH = "StrengthSlider"
    const val EDIT_VIB_SLIDER_DURATION = "DurationSlider"
    const val EDIT_SLIDER_PAUSE = "PauseSlider"
    const val EDIT_ITEM_NAME_TEXTINPUT = "ItemNameTextInput"
    const val EDIT_CONFIG_NAME_TEXTINPUT = "ConfigNameTextInput"
    const val EDIT_CONFIG_DESCRIPTION_TEXTINPUT = "ConfigDescriptionTextInput"
    const val EDIT_MOVE_LEFT = "MoveLeft"
    const val EDIT_MOVE_RIGHT = "MoveRight"
    const val EDIT_TIMELINE_SCREEN_ADD_BUTTON = "AddButton"
    const val EDIT_TIMELINE_SCREEN_ADD_DIALOG = "AddDialog"
    const val EDIT_TIMELINE_SCREEN_ADD_DIALOG_VIBRATION = "AddDialogVibration"
    const val EDIT_TIMELINE_SCREEN_ADD_DIALOG_SOUND = "AddDialogSound"


    const val DELAY_START_BUTTON = "DelayStartButton"
    const val DELAY_MAIN_COLUMN = "DelayMainCOLUMN"

    const val RUN_END_BUTTON = "RunEndButton"

    const val SOUND_SELECT_BUTTON = "SoundSelectButton"

    const val EDIT_VIB_FIELD_DURATION = "VibrationDurationMinField"

}