...
    <string name="stop">Stop</string>
    <string name="user_settings">User Settings</string>
    <string name="user_select_configuration">Select configuration</string>
    <string name="error_invalid_name">Name can\'t be empty and can\'t contain whitespace</string>


    <string name="min">Min</string>
    <string name="max">Max</string>
    <string name="trainer">Trainer</string>
    <string name="remote">Remote</string>
    <string name="standalone">Standalone</string>
    <string name="welcome_to">Welcome to</string>
    <string name="battery_optimization">Battery Optimization</string>
...
