...
    <string name="homescreen_btn_select_profile">Select Profile</string>
    <string name="editTimeline_AddConfigComponentDialog_Question">What do you want to add?</string>
    <string name="editTimeline_addConfigComponentDialog_AddSound">Add Sound</string>
    <string name="editTimeline_AddConfigComponentDialog_Cancel">Cancel</string>
    <string name="editTimeline_AddConfigComponentDialog_addVibration">Add Vibration</string>
    <string name="delay_btn_start">START</string>
    <string name="editTimeline_name">Name</string>
    <string name="editTimeline_description">Description</string>
    <string name="editTimeline_SoundVolume">Volume</string>
    <string name="editTimeline_Pause">Pause</string>
    <string name="editTimeline_range">"to "</string>
    <string name="editTimeline_Vibration_Strength">Strength</string>
    <string name="editTimeline_Vibration_duration">Duration</string>
    <string name="edit_name">Name</string>
...
